@@ -15,7 +15,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.45
+Release: 0.46
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -459,6 +459,9 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
+* Sun Dec 29 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.46
+- don't segfault with packages produced by rpm-2.93 (#80618).
+
 * Sat Dec 28 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.45
 - error if querying with iterator on different sized arrays.
 - add rpmfi methods to access color, class, and dependencies.
